--- a/style.css
+++ b/style.css
@@ -1,4 +1,14 @@
 body {
   background: #000000;
   color: #ffffff;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1rem;
+}
+
+.content {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 460px;
+
 }
