--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background: #000000;
+  background: #252424;
   color: #ffffff;
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
@@ -9,6 +9,41 @@ body {
 .content {
   margin: 0 auto;
   width: 100%;
-  max-width: 460px;
+  max-width: 760px;
+  margin-top: 45px;
+  margin-bottom: 45px;
+  background-color: #2b2a2a;
+  padding: 48px;
+  border-radius: 18px;
+}
 
+.topo {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 36px;
+}
+
+.topo input {
+  width: 600px;
+  padding: 12px;
+  border-radius: 15px;
+  border: 1px solid #191818;
+  outline: none;
+  font-size: 1.1rem;
+  background-color: #252424;
+  color: #fff;
+}
+
+.topo button {
+  width: 43px;
+  border-radius: 12px;
+  border: 1px solid #191818;
+  background: #252424;;
+  color: #fff;
+  outline: none;
+}
+
+.topo button:hover{
+  background: #181616;
+  border: 1px solid #fff;
 }
