--- a/style.css
+++ b/style.css
@@ -85,3 +85,104 @@ body {
   border: 1px solid #fff;
   cursor: pointer;
 }
+
+/* css poupap edition */
+
+#winEdit{
+  position: fixed;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50% );
+  padding: 20px;
+  background:rgb(51, 50, 50);
+  border: 1px solid #2f2e2e;
+  width: 60%;
+  border-radius: 18px;
+  z-index: 150;
+  display: none;
+}
+
+#winEdit.open{
+  display: block !important;
+}
+
+#winEditFundo {
+  position: fixed;
+  top: 0;
+  background-color: #000;
+  bottom: 0;
+  left: 0;
+  opacity: 0.8;
+  z-index: 100;
+  right: 0;
+  display: none;
+}
+
+#winEditFundo.open{
+  display: block !important;
+}
+
+#winEditBtnClose{
+  position: absolute;
+  top: -5%;
+  right: -1%;
+  width: 45px;
+  height: 45px;
+  border-radius: 10px;
+  border: 1px solid #191818;
+  background: #252424;;
+  color: #fff;
+  outline: none;
+  cursor: pointer;
+}
+
+#winEditBtnClose:hover {
+  background: #181616;
+  border: 1px solid #fff;
+  cursor: pointer;
+}
+
+form {
+  width: 100%;
+  margin-top: 25px;
+}
+
+.frm-rons {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+
+.frm-rons label {
+  margin-bottom: 4px;
+}
+
+.frm-rons input {
+  padding: 12px;
+  border-radius: 8px;
+  outline: none;
+  font-size: 1.1rem;
+  background-color: #252424;
+  color: #fff;
+  border: 2px solid rgb(51, 50, 50);
+}
+
+.frm-rons button {
+  margin: auto;
+  width: 90px;
+  height: 45px;
+  background-color: #252424;
+  color: #fff;
+  border: 2px solid rgb(51, 50, 50);
+  padding: 10px;
+  border-radius: 8px;
+  font-size: 1.3 rem;
+  cursor: pointer;
+
+}
+
+.frm-rons button:hover{
+  background: #181616;
+  border: 1px solid #fff;
+  cursor: pointer;
+}
