--- a/style.css
+++ b/style.css
@@ -81,6 +81,9 @@ body {
 
 .textoTarefa{
   overflow: hidden;
+  text-overflow: ellipsis;
+  width: 88%;
+  white-space: nowrap;
 }
 
 .btnAction:hover{
@@ -188,4 +191,50 @@ form {
   background: #181616;
   border: 1px solid #fff;
   cursor: pointer;
+}
+
+
+@media (max-width: 1230px){
+  .textoTarefa{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 85%;
+    white-space: nowrap;
+  }
+}
+
+@media (max-width: 1000px){
+  .textoTarefa{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 80%;
+    white-space: nowrap;
+  }
+}
+
+@media (max-width: 760px){
+  .textoTarefa{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 70%;
+    white-space: nowrap;
+  }
+}
+
+@media (max-width: 550px){
+  .textoTarefa{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 65%;
+    white-space: nowrap;
+  }
+}
+
+@media (max-width: 460px){
+  .textoTarefa{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 55%;
+    white-space: nowrap;
+  }
 }
