--- a/style.css
+++ b/style.css
@@ -3,6 +3,24 @@
   --body-bg: #252424;
 
 }
+.dark-mode:root{
+  --body-color: #fafafa;
+  --body-bg:  #252424;
+}
+
+.yellom-mode:root{
+  --body-color:#fafafa;
+  --body-bg: background-color: linear-gradient(-225deg, #AC32E4 0%, #7918F2 48%, #4801FF 100%);
+}
+
+.mar-mode:root{
+  --body-color: #252424;
+  --body-bg: background-color: #f8d800; background:
+  -moz-linear-gradient(45deg,  #f8d800 0%,#fdeb71 100%);
+  background: -webkit-linear-gradient(45deg,  #f8d800 0%,#fdeb71 100%);
+  background: linear-gradient(45deg,  #f8d800 0%,#fdeb71 100%);
+}
+
 .container{
   display: flex;
   justify-content: space-around;
