--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 }
 
 .mar-mode:root{
-  --body-color: #252424;
+  --body-color: #fafafa;
   --body-bg: background-color: #f8d800; background:
   -moz-linear-gradient(45deg,  #f8d800 0%,#fdeb71 100%);
   background: -webkit-linear-gradient(45deg,  #f8d800 0%,#fdeb71 100%);
